--- a/index.html
+++ b/index.html
@@ -104,25 +104,18 @@ select, input[type="time"] {
 </div>
 
 <div class="section">
-<label>生ビール（600円）</label>
+<label>ソフトドリンク（330円）</label>
 <div class="counter">
 <button onclick="change('beer',-1)">−</button>
 <div class="count" id="beer">0</div>
 <button onclick="change('beer',1)">＋</button>
 </div>
 
-<label>ハイボール（600円）</label>
+<label>アルコール（600円）</label>
 <div class="counter">
 <button onclick="change('highball',-1)">−</button>
 <div class="count" id="highball">0</div>
 <button onclick="change('highball',1)">＋</button>
-</div>
-
-<label>焼酎（600円）</label>
-<div class="counter">
-<button onclick="change('shochu',-1)">−</button>
-<div class="count" id="shochu">0</div>
-<button onclick="change('shochu',1)">＋</button>
 </div>
 
 <label>出前（円）</label>
